tests/baselines/reference/objectLiteralFreshnessWithSpread.errors.txt
tests/cases/compiler/objectLiteralFreshnessWithSpread.ts(2,35): error TS2322: Type '{ z: number; b: number; extra: number; a: number; }' is not assignable to type '{ a: any; b: any; }'.
  Object literal may only specify known properties, and 'z' does not exist in type '{ a: any; b: any; }'.


==== tests/cases/compiler/objectLiteralFreshnessWithSpread.ts (1 errors) ====
    let x = { b: 1, extra: 2 }
    let xx: { a, b }  = { a: 1, ...x, z: 3 } // error for 'z', no error for 'extra'
                                      ~~~~
!!! error TS2322: Type '{ {|z|0|}: number; {|b|1|}: number; {|extra|2|}: number; {|a|3|}: number; }' is not assignable to type '{ {|a|4|}: any; {|b|5|}: any; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'z' does not exist in type '{ a: any; b: any; }'.
!!! annotated symbol 0 tests/cases/compiler/objectLiteralFreshnessWithSpread.ts:2:35
!!! annotated symbol 1 tests/cases/compiler/objectLiteralFreshnessWithSpread.ts:1:11
!!! annotated symbol 2 tests/cases/compiler/objectLiteralFreshnessWithSpread.ts:1:17
!!! annotated symbol 3 tests/cases/compiler/objectLiteralFreshnessWithSpread.ts:2:23
!!! annotated symbol 4 tests/cases/compiler/objectLiteralFreshnessWithSpread.ts:2:11
!!! annotated symbol 5 tests/cases/compiler/objectLiteralFreshnessWithSpread.ts:2:14
    